# dflasher

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: prompts.txt  train_texts.txt
src/dflasher/: __init__.py  cli.py  config.py  data.py  evaluation.py  generation.py  hf.py  hidden_server.py  mac.py  model_profile.py  modeling.py  official.py  omlx.py  speculators_bridge.py  training.py  zlab_mlx.py
tests/: test_cli_build.py  test_cli_mac.py  test_cli_zlab.py  test_data_and_config.py  test_generation_correctness.py  test_hf.py  test_hidden_server.py  test_mac_pipeline.py  test_model_profile.py  test_official_pipeline.py  test_omlx_backend.py  test_speculators_bridge.py
