[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dflasher"
version = "0.1.0"
description = "Train and test DFlash-style speculative draft models for Hugging Face causal LMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dflasher contributors" }]
keywords = [
  "dflash",
  "draft-model",
  "huggingface",
  "llm",
  "llm-inference",
  "mlx",
  "omlx",
  "speculative-decoding",
  "transformers",
  "vllm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "accelerate>=0.33",
  "datasets>=2.19",
  "huggingface-hub>=0.24",
  "httpx>=0.27",
  "numpy>=1.26",
  "rich>=13.7",
  "safetensors>=0.4.3",
  "torch>=2.2",
  "tqdm>=4.66",
  "transformers>=4.45",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
official = [
  "httpx>=0.27",
  "openai>=1.0",
  "speculators>=0.5.0",
]
mac = [
  "mlx==0.31.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "mlx-lm==0.31.3; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
zlab-mlx = [
  "dflash[mlx] @ git+https://github.com/z-lab/dflash.git ; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
vllm = [
  "vllm>=0.20.1",
]

[project.scripts]
dflasher = "dflasher.cli:app"

[project.urls]
Homepage = "https://github.com/dawncr0w/dflasher"
Repository = "https://github.com/dawncr0w/dflasher"
Issues = "https://github.com/dawncr0w/dflasher/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
